--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,9 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 MEDIA_DISK=
+
+YANDEX_S3_KEY=
+YANDEX_S3_SECRET=
+YANDEX_S3_ENDPOINT=
+YANDEX_S3_BUCKET=
+YANDEX_S3_URL=
