--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -4,6 +4,7 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /src/public;
+    server_name 1950923-cv78914.twc1.net www.1950923-cv78914.twc1.net
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
