--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,15 +3,18 @@ version: "3.4"
 services:
     nginx:
         image: nginx:latest
+        restart: unless-stopped
         ports:
             - "80:80"
             - "443:443"
         volumes:
             - .:/src
+            - /etc/letsencrypt/:/etc/letsencrypt/
             - ./deploy/nginx.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - php-fpm
     php-fpm:
+        restart: unless-stopped
         build:
             context: .
         command: ["./start-php-fpm.sh"]
@@ -35,4 +38,5 @@ services:
         environment:
             COMPOSER_MEMORY_LIMIT: 4G
     redis:
+        restart: unless-stopped
         image: redis:latest
