--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,10 +1,13 @@
 server {
-    listen 80;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /src/public;
-    server_name 1950923-cv78914.twc1.net www.1950923-cv78914.twc1.net
+    server_name 1950923-cv78914.twc1.net www.1950923-cv78914.twc1.net;
+    ssl_certificate /etc/letsencrypt/live/1950923-cv78914.twc1.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/1950923-cv78914.twc1.net/privkey.pem;
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
